# image-upscaler

./: .gitignore  README.md  index.html  localhost-key.pem  localhost.pem  manifest.webmanifest  package-lock.json  package.json  service-worker.js  sw.js  vite.config.js
assets/: image_upscaler_wasm_bg-CiQYzSEV.wasm  index-BxnNkZ0t.js  index-yokWRRib.css
public/: manifest.json
src/: App.jsx  main.js  main.jsx  service-worker.js  style.css  wasm-handler.js
wasm/: Cargo.toml
wasm copy/: Cargo.toml
wasm copy/src/: lib.rs
wasm/src/: lib.rs
