[package]
name = "image-upscaler-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"
image = "0.24.7"
web-sys = { version = "0.3.66", features = ["ImageData", "CanvasRenderingContext2d", "HtmlCanvasElement"] }
js-sys = "0.3.66"
console_error_panic_hook = "0.1.7"
